--- a/.dev.env
+++ b/.dev.env
@@ -2,5 +2,5 @@
 RUST_BACKTRACE=1
 
 MINIO_URL="http://minio:9000"
-MINIO_ACCESS="u9mnm7vTMO9so90TttVP"
-MINIO_SECRET="XdHl8wvVfvxZyejcCLrFMbU8NSswXnanux6cY65s"
+MINIO_ACCESS="UC10UP4QE29D8L33GHMD"
+MINIO_SECRET="rBtnrLf+ptU+QtoDLhqj3UrQhTfJfE1EpL62nCQ8"
